--- a/Dockerfile.development
+++ b/Dockerfile.development
@@ -5,12 +5,15 @@ WORKDIR /services/engraph-backend
 
 # Copy package files for next step
 COPY tsconfig.json /services/engraph-backend/
+
 COPY package.json /services/engraph-backend/
-COPY package-lock.json /services/engraph-backend/
+
+# Need schema.prisma file for postinstall client generation
 COPY prisma /services/engraph-backend/prisma
-# Run ci instead of install
+
+# Todo: Run ci instead of install
 # ci requires package files to exist previously
-RUN ["npm", "ci"]
+RUN ["npm", "install"]
 
 # Copy source files
 COPY src /services/engraph-backend/src
